unpackaged/main/default/objects/Lead/fields/Academy__c.field-meta.xml
<CustomField>
    <fullName>Academy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Academy</label>
    <type>Checkbox</type>
</CustomField>