unpackaged/main/default/objects/Lead/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Used for Xylem leads</description>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aanderaa</fullName>
            </value>
            <value>
                <fullName>AC Fire</fullName>
            </value>
            <value>
                <fullName>Bell &amp; Gossett</fullName>
            </value>
            <value>
                <fullName>Bellingham + Stanley</fullName>
            </value>
            <value>
                <fullName>CentriPro</fullName>
            </value>
            <value>
                <fullName>ebro</fullName>
            </value>
            <value>
                <fullName>Essence of Life</fullName>
            </value>
            <value>
                <fullName>Flojet</fullName>
            </value>
            <value>
                <fullName>Flygt</fullName>
            </value>
            <value>
                <fullName>Godwin</fullName>
            </value>
            <value>
                <fullName>Goulds Water Technology</fullName>
            </value>
            <value>
                <fullName>HYPACK</fullName>
            </value>
            <value>
                <fullName>Jabsco</fullName>
            </value>
            <value>
                <fullName>Leopold</fullName>
            </value>
            <value>
                <fullName>Lowara</fullName>
            </value>
            <value>
                <fullName>McDonnell &amp; Miller</fullName>
            </value>
            <value>
                <fullName>MJK</fullName>
            </value>
            <value>
                <fullName>OI Analytical</fullName>
            </value>
            <value>
                <fullName>PureHM</fullName>
            </value>
            <value>
                <fullName>Pure Technologies</fullName>
            </value>
            <value>
                <fullName>Royce Technologies</fullName>
            </value>
            <value>
                <fullName>Rule</fullName>
            </value>
            <value>
                <fullName>Sanitare</fullName>
            </value>
            <value>
                <fullName>Sensus</fullName>
            </value>
            <value>
                <fullName>Sentec</fullName>
            </value>
            <value>
                <fullName>SI Analytics</fullName>
            </value>
            <value>
                <fullName>Smith-Blair</fullName>
            </value>
            <value>
                <fullName>SonTek</fullName>
            </value>
            <value>
                <fullName>Standard Xchange</fullName>
            </value>
            <value>
                <fullName>Wachs Water Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>