unpackaged/main/default/objects/Lead/fields/Business_Advantage_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_Advantage_Record_ID__c</fullName>
    <externalId>true</externalId>
    <label>Business Advantage Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>