unpackaged/main/default/objects/Lead/fields/BvD_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>BvD_ID_Number__c</fullName>
    <label>BvD ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>