unpackaged/main/default/objects/Lead/fields/CasesafeID__c.field-meta.xml
<CustomField>
    <fullName>CasesafeID__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CasesafeID</label>
    <type>Text</type>
</CustomField>