unpackaged/main/default/objects/Lead/fields/CompanyLinkedInURL__c.field-meta.xml
<CustomField>
    <fullName>CompanyLinkedInURL__c</fullName>
    <label>Company LinkedIn</label>
    <type>Url</type>
</CustomField>