unpackaged/main/default/objects/Lead/fields/CompanyTwitterURL__c.field-meta.xml
<CustomField>
    <fullName>CompanyTwitterURL__c</fullName>
    <label>Company Twitter</label>
    <type>Url</type>
</CustomField>