unpackaged/main/default/objects/Lead/fields/ContactLinkedInURL__c.field-meta.xml
<CustomField>
    <fullName>ContactLinkedInURL__c</fullName>
    <label>Contact LinkedIn</label>
    <type>Url</type>
</CustomField>