unpackaged/main/default/objects/Lead/fields/ContactTwitterURL__c.field-meta.xml
<CustomField>
    <fullName>ContactTwitterURL__c</fullName>
    <label>Contact Twitter</label>
    <type>Url</type>
</CustomField>