unpackaged/main/default/objects/Lead/fields/Current_CAD_System__c.field-meta.xml
<CustomField>
    <fullName>Current_CAD_System__c</fullName>
    <label>Current CAD System(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>