unpackaged/main/default/objects/Lead/fields/Data_Services__c.field-meta.xml
<CustomField>
    <fullName>Data_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Services</label>
    <type>Checkbox</type>
</CustomField>