unpackaged/main/default/objects/Lead/fields/Data_Services_Products__c.field-meta.xml
<CustomField>
    <fullName>Data_Services_Products__c</fullName>
    <label>Data Services Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Data_Services__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>C3P - New Contracts</fullName>
            </value>
            <value>
                <fullName>C3P - Renewed Contracts</fullName>
            </value>
            <value>
                <fullName>C3P - CAD Services</fullName>
            </value>
            <value>
                <fullName>C3P - Training/Consultancy</fullName>
            </value>
            <value>
                <fullName>C3P - Upgrades</fullName>
            </value>
            <value>
                <fullName>C3P - Other</fullName>
            </value>
            <value>
                <fullName>V3P - New Contracts</fullName>
            </value>
            <value>
                <fullName>V3P - Renewed Contracts</fullName>
            </value>
            <value>
                <fullName>V3P - CAD Services</fullName>
            </value>
            <value>
                <fullName>V3P - Training/Consultancy</fullName>
            </value>
            <value>
                <fullName>V3P - Upgrades</fullName>
            </value>
            <value>
                <fullName>V3P - Other</fullName>
            </value>
            <value>
                <fullName>Majenta - New Contracts</fullName>
            </value>
            <value>
                <fullName>Majenta - Renewed Contracts</fullName>
            </value>
            <value>
                <fullName>Majenta - CAD Services</fullName>
            </value>
            <value>
                <fullName>Majenta - Training/Consultancy</fullName>
            </value>
            <value>
                <fullName>Majenta - Upgrades</fullName>
            </value>
            <value>
                <fullName>Majenta - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>