unpackaged/main/default/objects/Lead/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academy</fullName>
                <color>#A53711</color>
                <label>Academy</label>
            </value>
            <value>
                <fullName>BIM</fullName>
            </value>
            <value>
                <fullName>Dassault Systemes</fullName>
                <color>#DDDDDD</color>
                <label>Dassault Systemes</label>
            </value>
            <value>
                <fullName>Data Services</fullName>
                <color>#78C953</color>
                <label>Data Services</label>
            </value>
            <value>
                <fullName>IT</fullName>
                <color>#000099</color>
                <label>IT</label>
            </value>
            <value>
                <fullName>MX</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
                <color>#F96FB7</color>
                <label>Online</label>
            </value>
            <value>
                <fullName>PLM</fullName>
                <color>#00CCCC</color>
                <label>PLM</label>
            </value>
            <value>
                <fullName>Software</fullName>
                <color>#FF9900</color>
                <label>Software</label>
            </value>
            <value>
                <fullName>Solid Edge</fullName>
                <color>#3366FF</color>
                <label>Solid Edge</label>
            </value>
            <value>
                <fullName>enerjyHub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>