unpackaged/main/default/objects/Lead/fields/Division_Guess__c.field-meta.xml
<CustomField>
    <fullName>Division_Guess__c</fullName>
    <formula>IF( Software__c , 'Software' ,
  IF( IT__c , 'IT' ,
    IF( PLM__c , 'PLM' ,
      IF( Data_Services__c , 'Data Services' ,
        IF( Academy__c , 'Academy' , 'ERROR'
        )
      )
    )
  )
)</formula>
    <label>Division Guess</label>
    <type>Text</type>
</CustomField>