unpackaged/main/default/objects/Lead/fields/DS_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>DS_Lead_ID__c</fullName>
    <description>Lead ID for DS Marketing Driven Leads</description>
    <label>DS Lead ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>