unpackaged/main/default/objects/Lead/fields/DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Number__c</fullName>
    <label>DUNS Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>