unpackaged/main/default/objects/Lead/fields/EmployeesSite__c.field-meta.xml
<CustomField>
    <fullName>EmployeesSite__c</fullName>
    <label>Employees at Site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>