unpackaged/main/default/objects/Lead/fields/EmployeesUK__c.field-meta.xml
<CustomField>
    <fullName>EmployeesUK__c</fullName>
    <label>Employees in the UK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>