unpackaged/main/default/objects/Lead/fields/enerjyhub_Type__c.field-meta.xml
<CustomField>
    <fullName>enerjyhub_Type__c</fullName>
    <label>enerjyhub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>enerjyhub_Type</valueSetName>
    </valueSet>
</CustomField>