unpackaged/main/default/objects/Lead/fields/FirstPreferredTrainingDate__c.field-meta.xml
<CustomField>
    <fullName>FirstPreferredTrainingDate__c</fullName>
    <label>First Preferred Training Date</label>
    <type>Date</type>
</CustomField>