unpackaged/main/default/objects/Lead/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <description>Captures the suppliers 3DEXPERIENCE function.</description>
    <inlineHelpText>This field is used to capture the suppliers 3DEXPERIENCE function.</inlineHelpText>
    <label>Function</label>
    <length>120</length>
    <type>Text</type>
</CustomField>