unpackaged/main/default/objects/Lead/fields/G2BRegisteredPick__c.field-meta.xml
<CustomField>
    <fullName>G2BRegisteredPick__c</fullName>
    <label>G2B Registered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>In Process of Applying</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>