unpackaged/main/default/objects/Lead/fields/Import_Source__c.field-meta.xml
<CustomField>
    <fullName>Import_Source__c</fullName>
    <description>The source an an imported lead.</description>
    <label>Import Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>