unpackaged/main/default/objects/Lead/fields/In_Dialogue__c.field-meta.xml
<CustomField>
    <fullName>In_Dialogue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Dialogue</label>
    <type>Checkbox</type>
</CustomField>