unpackaged/main/default/objects/Lead/fields/IT__c.field-meta.xml
<CustomField>
    <fullName>IT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IT</label>
    <type>Checkbox</type>
</CustomField>