unpackaged/main/default/objects/Lead/fields/IT_Products__c.field-meta.xml
<CustomField>
    <fullName>IT_Products__c</fullName>
    <label>IT Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>IT__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>NetApp - FAS6000</fullName>
            </value>
            <value>
                <fullName>NetApp - FAS3000</fullName>
            </value>
            <value>
                <fullName>NetApp - FAS2000</fullName>
            </value>
            <value>
                <fullName>NetApp - FAS200</fullName>
            </value>
            <value>
                <fullName>NetApp - Nearstore VTL</fullName>
            </value>
            <value>
                <fullName>NetApp - Other</fullName>
            </value>
            <value>
                <fullName>Symantec - Backup Exec</fullName>
            </value>
            <value>
                <fullName>Symantec - Net-Backup</fullName>
            </value>
            <value>
                <fullName>Symantec - Puredisk</fullName>
            </value>
            <value>
                <fullName>Symantec - System Recovery</fullName>
            </value>
            <value>
                <fullName>Symantec - Enterprise Vault</fullName>
            </value>
            <value>
                <fullName>Vmware - ESX3</fullName>
            </value>
            <value>
                <fullName>Vmware - VDI</fullName>
            </value>
            <value>
                <fullName>Vmware - Virtual Centre</fullName>
            </value>
            <value>
                <fullName>Vmware - VM Convertor</fullName>
            </value>
            <value>
                <fullName>IBM - NAS - n-series</fullName>
            </value>
            <value>
                <fullName>IBM - SAN</fullName>
            </value>
            <value>
                <fullName>IBM - System Storage DS</fullName>
            </value>
            <value>
                <fullName>IBM - System Storage TS</fullName>
            </value>
            <value>
                <fullName>Dell - Desktop Workstations</fullName>
            </value>
            <value>
                <fullName>Dell - Mobile Workstations</fullName>
            </value>
            <value>
                <fullName>Sun - Desktop Workstations</fullName>
            </value>
            <value>
                <fullName>Sun - Servers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>