unpackaged/main/default/objects/Lead/fields/Licence__c.field-meta.xml
<CustomField>
    <fullName>Licence__c</fullName>
    <description>Captures the suppliers 3DEXPERIENCE licence required.</description>
    <inlineHelpText>This field is used to capture the suppliers 3DEXPERIENCE licence required.</inlineHelpText>
    <label>Licence</label>
    <length>120</length>
    <type>Text</type>
</CustomField>