unpackaged/main/default/objects/Lead/fields/Mark_for_Delete__c.field-meta.xml
<CustomField>
    <fullName>Mark_for_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>WARNING: Check this box if you wish to mark this record for permanent deletion. If you have done this in error please contact your Salesforce.com administrator.</inlineHelpText>
    <label>Mark for Delete</label>
    <type>Checkbox</type>
</CustomField>