unpackaged/main/default/objects/Lead/fields/NissanGlobalSupplierCode__c.field-meta.xml
<CustomField>
    <fullName>NissanGlobalSupplierCode__c</fullName>
    <label>Nissan Global Supplier Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>