unpackaged/main/default/objects/Lead/fields/NissanTrainingRequirementPick__c.field-meta.xml
<CustomField>
    <fullName>NissanTrainingRequirementPick__c</fullName>
    <label>Nissan Training Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G2B</fullName>
            </value>
            <value>
                <fullName>TCP2</fullName>
            </value>
            <value>
                <fullName>Paperless</fullName>
            </value>
            <value>
                <fullName>G2B/TCP2</fullName>
            </value>
            <value>
                <fullName>G2B/Paperless</fullName>
            </value>
            <value>
                <fullName>TCP2/Paperless</fullName>
            </value>
            <value>
                <fullName>G2B/TCP2/Paperless</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>