unpackaged/main/default/objects/Lead/fields/Number_of_sites__c.field-meta.xml
<CustomField>
    <fullName>Number_of_sites__c</fullName>
    <description>Providing the number of sites a supplier wants to subscribe to.</description>
    <label>Number of sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>