unpackaged/main/default/objects/Lead/fields/OEM__c.field-meta.xml
<CustomField>
    <fullName>OEM__c</fullName>
    <description>This field will determine for what OEM this lead is.</description>
    <label>OEM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OEM</valueSetName>
    </valueSet>
</CustomField>