unpackaged/main/default/objects/Lead/fields/OpportunityDescription__c.field-meta.xml
<CustomField>
    <fullName>OpportunityDescription__c</fullName>
    <label>Opportunity Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>