unpackaged/main/default/objects/Lead/fields/PLM__c.field-meta.xml
<CustomField>
    <fullName>PLM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PLM</label>
    <type>Checkbox</type>
</CustomField>