unpackaged/main/default/objects/Lead/fields/RatingNumber__c.field-meta.xml
<CustomField>
    <fullName>RatingNumber__c</fullName>
    <formula>CASE(Rating, 
"E", 1,
"D", 2,
"C", 3, 
"B", 4, 
"A", 5, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>