unpackaged/main/default/objects/Lead/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Captures the suppliers 3DEXPERIENCE role.</description>
    <inlineHelpText>This field is used to capture the suppliers 3DEXPERIENCE role.</inlineHelpText>
    <label>Role</label>
    <length>120</length>
    <type>Text</type>
</CustomField>