unpackaged/main/default/objects/Lead/fields/SecondPreferredTrainingDate__c.field-meta.xml
<CustomField>
    <fullName>SecondPreferredTrainingDate__c</fullName>
    <label>Second Preferred Training Date</label>
    <type>Date</type>
</CustomField>