unpackaged/main/default/objects/Lead/fields/Siemens_ExpectedCloseDate__c.field-meta.xml
<CustomField>
    <fullName>Siemens_ExpectedCloseDate__c</fullName>
    <label>Expected Close Date</label>
    <type>Date</type>
</CustomField>