unpackaged/main/default/objects/Lead/fields/Siemens_LeadID__c.field-meta.xml
<CustomField>
    <fullName>Siemens_LeadID__c</fullName>
    <label>Siemens Lead ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>