unpackaged/main/default/objects/Lead/fields/Siemens_LeadInterest__c.field-meta.xml
<CustomField>
    <fullName>Siemens_LeadInterest__c</fullName>
    <label>Lead Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>CAE</fullName>
            </value>
            <value>
                <fullName>CAM</fullName>
            </value>
            <value>
                <fullName>Components - D-Cubed</fullName>
            </value>
            <value>
                <fullName>Components - Geolus</fullName>
            </value>
            <value>
                <fullName>Components - JT Open</fullName>
            </value>
            <value>
                <fullName>Components - Parasolid</fullName>
            </value>
            <value>
                <fullName>Components - PLM Vis</fullName>
            </value>
            <value>
                <fullName>Components - PLM XML</fullName>
            </value>
            <value>
                <fullName>DM - NX - CAM</fullName>
            </value>
            <value>
                <fullName>DM - NX I-deas - CAM</fullName>
            </value>
            <value>
                <fullName>DM - NX Mach- CAM</fullName>
            </value>
            <value>
                <fullName>DM - Tecno Elec - Assembly Expert</fullName>
            </value>
            <value>
                <fullName>DM - Tecno Elec - Cimbridge</fullName>
            </value>
            <value>
                <fullName>DM - Tecno Elec - DFM</fullName>
            </value>
            <value>
                <fullName>DM - Tecno Elec - Fuji Flexa CAD</fullName>
            </value>
            <value>
                <fullName>DM - Tecno Elec - MES</fullName>
            </value>
            <value>
                <fullName>DM - Tecno Elec - OMM</fullName>
            </value>
            <value>
                <fullName>DM - Tecno Elec - Test Expert</fullName>
            </value>
            <value>
                <fullName>DM - Tecno Elec - Unicam</fullName>
            </value>
            <value>
                <fullName>DM - Tecno Mech - FactoryCAD</fullName>
            </value>
            <value>
                <fullName>DM - Tecno Mech - FactoryFlow</fullName>
            </value>
            <value>
                <fullName>DM - Tecno Mech - Jack</fullName>
            </value>
            <value>
                <fullName>DM - Tecno Mech - Process &amp; Mfg Data Mgt</fullName>
            </value>
            <value>
                <fullName>DM - Tecno Mech - Resource</fullName>
            </value>
            <value>
                <fullName>DM - Tecno Mech - Simulation/Validation</fullName>
            </value>
            <value>
                <fullName>DM - Tecno Shop Floor - FactoryLink</fullName>
            </value>
            <value>
                <fullName>DM - Tecno Shop Floor - TMES(Xfactory)</fullName>
            </value>
            <value>
                <fullName>Education Services</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>