unpackaged/main/default/objects/Lead/fields/Siemens_LeadSource__c.field-meta.xml
<CustomField>
    <fullName>Siemens_LeadSource__c</fullName>
    <label>Siemens Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>