unpackaged/main/default/objects/Lead/fields/Siemens_OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>Siemens_OpportunityType__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add-on Business</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>