unpackaged/main/default/objects/Lead/fields/Siemens_PartnerRegistrationType__c.field-meta.xml
<CustomField>
    <fullName>Siemens_PartnerRegistrationType__c</fullName>
    <label>Partner Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner Owned</fullName>
            </value>
            <value>
                <fullName>Partner Shared – Partner drives sales strategy</fullName>
            </value>
            <value>
                <fullName>Partner Shared – UGS drives sales strategy</fullName>
            </value>
            <value>
                <fullName>Partner Influenced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>