unpackaged/main/default/objects/Lead/fields/Siemens_Selection__c.field-meta.xml
<CustomField>
    <fullName>Siemens_Selection__c</fullName>
    <label>Selection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>