unpackaged/main/default/objects/Lead/fields/Siemens_UGSZoneOwnership__c.field-meta.xml
<CustomField>
    <fullName>Siemens_UGSZoneOwnership__c</fullName>
    <label>UGS Zone Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>Asia/Pacific</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>