unpackaged/main/default/objects/Lead/fields/Software__c.field-meta.xml
<CustomField>
    <fullName>Software__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Software</label>
    <type>Checkbox</type>
</CustomField>