unpackaged/main/default/objects/Lead/fields/Software_Products__c.field-meta.xml
<CustomField>
    <fullName>Software_Products__c</fullName>
    <label>Software Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Software__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Autodesk MSD - Design|Studio</fullName>
            </value>
            <value>
                <fullName>Autodesk MSD - Studio</fullName>
            </value>
            <value>
                <fullName>Autodesk MSD - Surface|Studio</fullName>
            </value>
            <value>
                <fullName>Autodesk MSD - Auto|Studio</fullName>
            </value>
            <value>
                <fullName>Autodesk MSD - Image|Studio</fullName>
            </value>
            <value>
                <fullName>Autodesk MSD - Showcase</fullName>
            </value>
            <value>
                <fullName>Autodesk MSD - Showcase Pro</fullName>
            </value>
            <value>
                <fullName>Autodesk MSD - Portfolio Wall</fullName>
            </value>
            <value>
                <fullName>Autodesk MSD - Direct|Connect</fullName>
            </value>
            <value>
                <fullName>Autodesk MSD - Training</fullName>
            </value>
            <value>
                <fullName>Autodesk MSD - Other</fullName>
            </value>
            <value>
                <fullName>Autodesk MES - Maya</fullName>
            </value>
            <value>
                <fullName>Autodesk MES - 3D Studio</fullName>
            </value>
            <value>
                <fullName>Autodesk MES - Sketchbook Pro</fullName>
            </value>
            <value>
                <fullName>Autodesk MES - Training</fullName>
            </value>
            <value>
                <fullName>Autodesk MES - Other</fullName>
            </value>
            <value>
                <fullName>Sensable - ClayTools</fullName>
            </value>
            <value>
                <fullName>Sensable - FFM/Omni</fullName>
            </value>
            <value>
                <fullName>Sensable - FFM/Desktop</fullName>
            </value>
            <value>
                <fullName>Sensable - FFMP</fullName>
            </value>
            <value>
                <fullName>Sensable - Training</fullName>
            </value>
            <value>
                <fullName>Sensable - Other</fullName>
            </value>
            <value>
                <fullName>Elysium - CAD.Feature</fullName>
            </value>
            <value>
                <fullName>Elysium - CAD.Doctor</fullName>
            </value>
            <value>
                <fullName>Elysium - CAD.Porter</fullName>
            </value>
            <value>
                <fullName>Elysium - PDQ-NP</fullName>
            </value>
            <value>
                <fullName>Elysium - Training</fullName>
            </value>
            <value>
                <fullName>Elysium - Other</fullName>
            </value>
            <value>
                <fullName>Icona - Aesthetica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>