unpackaged/main/default/objects/Lead/fields/Stars__c.field-meta.xml
<CustomField>
    <fullName>Stars__c</fullName>
    <formula>IMAGE( 
CASE(Rating, 
"E", "/img/samples/stars_100.gif",
"D", "/img/samples/stars_200.gif",
"C", "/img/samples/stars_300.gif", 
"B", "/img/samples/stars_400.gif", 
"A", "/img/samples/stars_500.gif", 
"/img/samples/stars_000.gif"), 
"rating")</formula>
    <label>Stars</label>
    <type>Text</type>
</CustomField>